trying to make seats work